--- a/css/main.css
+++ b/css/main.css
@@ -135,7 +135,7 @@ body {
 
 .hero-end__input {
     margin-bottom: 20px;
-    padding: 15px 350px 15px 32px;
+    padding: 15px 0 15px 32px;
     border: 1px solid #DEDEDE;
     border-radius: 5px;
 }
