--- a/css/main.css
+++ b/css/main.css
@@ -28,9 +28,6 @@ body {
     padding: 0;
     font-family: "Poppins", "Arial", sans-serif;
     font-weight: 700;
-    background-image: url(../images/bg.jpg);
-    background-repeat: no-repeat;
-    background-position: cover;
 }
 
 
@@ -64,7 +61,13 @@ body {
 /* STICKY-FOOTER */
 
 .site-main {
-    flex-grow: 1;
+    /* flex-grow: 1; */
+    background-image: url(../images/bg.jpg);
+    background-repeat: no-repeat;
+    background-position: cover;
+    background-size: 100%;
+    width: 100%;
+    height: 100vh;
 }
 
 .wrapper {
